--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "TOKEN": "",
-  "YOUTUBE_API_KEY": "",
+  "TOKEN": "ODEyMzExNzEwMTk0MzM1NzQ1.YC-6Ow.sgbzfN9Gmp48wEKIAJ6pQF8ljeU",
+  "YOUTUBE_API_KEY": "AIzaSyBpRsnI9POJvrf9wgBG-q7pc2qtiu6y8ww",
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 10,
   "PREFIX": "/",
